<resources>
    <string name="app_name">Bitcoin Miner</string>
    <string name="crypto_live_price">Bitcoin Live Price</string>
    <string name="crypto">BITCOIN</string>
    <string name="cryto_fundmentals">Bitcoin Fundamentals</string>
    <string name="cryto_trivia">Virtualcurrency Trivia Facts</string>
    <string name="cryto_guide">Understanding Bitcoin Guide</string>
    <string name="type_of_crypto">Types of Virtualcurrency</string>
    <string name="crypto_live_prices">Bitcoin Live Price</string>
    <string name="mine_crypto_currency">Mine Virtualcurrency</string>
    <string name="crypto_fundamentals">Bitcoin  Fundamentals</string>
    <string name="bitcoin_brief_history">Bitcoin Brief History</string>
    <string name="how_does_crypto_work">How does Virtualcurrency work</string>
    <string name="get_crypto">How to get Virtualcurrency</string>
    <string name="storing">Storing and Transations of \n Virtualcurrency</string>
    <string name="owning">Owning and Trading Virtualcurrency</string>
    <string name="benefits">5 Major benefits of Virtualcurrency</string>
    <string name="key">Final Thoughs and key \nTakeaways</string>
    <string name="facts">Virtualcurrency Trivia Facts</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="cardano">Cardano</string>
    <string name="stellar">Stellar</string>
    <string name="dogecoin">Dogecoin</string>
    <string name="tether">Tether</string>
    <string name="used_coin">USD Coin</string>
    <string name="xrp">XRP</string>
    <string name="terra">Terra</string>
    <string name="solana">Solana</string>
    <string name="alternative">Whats the alternative</string>
    <string name="all_power">Is all PoW mining the same</string>
    <string name="pow">Are there disadvantages to the PoW model</string>
    <string name="mining_work">How Virtualcurrency Mining Work</string>
    <string name="what_is_crypto_mining">What is Virtualcurrency Mining</string>
    <string name="cardona">Cardona</string>
    <string name="mine_crypto">Mine VirtualCurrency</string>
    <string name="avalanche">Avalanche</string>
    <string name="topic1">TOPIC \n 1</string>
    <string name="topic2">TOPIC \n 2</string>
    <string name="topic3">TOPIC \n 3</string>
    <string name="topic4">TOPIC \n 4</string>
    <string name="topic5">TOPIC \n 5</string>
    <string name="topic6">TOPIC \n 6</string>
    <string name="topic7">TOPIC \n 7</string>
    <string name="topic8">TOPIC \n 8</string>
    <string name="topic9">TOPIC \n 9</string>
    <string name="topic10">TOPIC \n 10</string>
    <string name="topic11">TOPIC \n 11</string>
    <string name="topic12">TOPIC \n 12</string>
    <string name="history">History of Virtualcurrency</string>
    <string name="who_invented">Who invented Virtualcurrency</string>
    <string name="rise">Rise of Virtualcurrency</string>
    <string name="advantages">Advantages of Virtualcurrency</string>
    <string name="disadvantages">Disadvantages of Virtualcurrency</string>
    <string name="valueratio">Virtualcurrency Valuation</string>
    <string name="anonimity">Transactions anonymity</string>
    <string name="potential">Potential of Blockchain</string>
    <string name="transaction">Transactions on Blockchain</string>
    <string name="public_or_private1">Are Blockchain Public or Private</string>
    <string name="public_or_private">Are Blockchain Public or \n Private</string>
    <string name="blockchain">Blockchain Ptential Upside</string>
    <string name="why_crypto_invent">Why were Bitcoincurrencies \n invented</string>
    <string name="invented">Who invented \n Virtualcurrency</string>
    <string name="what_are_crypto">What are Bitcoincurrencies</string>
    <string name="work">How does Virtualcurrency \n work</string>
    <string name="benefits_of_work">5 Major benefits of \n Virtualcurrency</string>
    <string name="avalancheSen">Avalanche (AVAX) is a virtualcurrency and blockchain platform that rivals Ethereum. AVAX is the native token of the Avalanche blockchain, which—like Ethereum—uses smart contracts to support a variety of blockchain projects.1
\nThe Avalanche blockchain can provide near-instant transaction finality. AVAX is used to pay transaction processing fees and secure the Avalanche network, and acts as a basic unit of account among blockchains in the Avalanche network.
</string>
    <string name="solanaSen">Solana is a blockchain platform designed to host decentralized, scalable applications. Founded in 2017, Solana is an open-source project currently run by Solana Foundation based in Geneva, while the blockchain was built by San Francisco-based Solana Labs.1 Solana is much faster in terms of the number of transactions it can process and has significantly lower transaction fees compared to rival blockchains like Ethereum.
\nThe virtualcurrency that runs on the Solana blockchain—also named Solana (SOLUSD) and with the ticker symbol SOL—has soared almost 12,000% so far in 2021,2 and with a market capitalization of over $66 billion, it is the fifth-largest virtualcurrency by this measure.
</string>
    <string name="terraSen">Terra is an open-source blockchain payment platform for an algorithmic stablecoin, which are virtualcurrencies that automatically track the price of currencies or other assets. The Terra blockchain enables users to instantly spend, save, trade, or exchange Terra stablecoins.
\nThe Terra protocol creates stablecoins designed to consistently track the price of a fiat currency (a government-backed currency such as the U.S. dollar or euro). It consists of two virtualcurrency tokens—Terra and Luna.
</string>
    <string name="xrpSen">Ripple is a technology that acts as both a virtualcurrency and a digital payment network for financial transactions. It was first released in 2012 and was co-founded by Chris Larsen and Jed McCaleb. Ripple main process is a payment settlement asset exchange and remittance system, similar to the SWIFT system for international money and security transfers, which is used by banks and financial middlemen dealing across currencies.
\nThe token used for the virtualcurrency is premined and utilizes the ticker symbol XRP. Ripple is the name of the company and the network, and XRP is the virtualcurrency token. The purpose of XRP is to serve as an intermediate mechanism of exchange between two currencies or networks—as a sort of temporary settlement layer denomination.
</string>
    <string name="USDSen">USD Coin (USDC) is a digital currency that is fully backed by U.S. dollar assets. USDC is a tokenized U.S. dollar, with the value of one USDC coin pegged 1:1 to the value of one U.S. dollar. The value of USDC is designed to remain stable, making USDC a stablecoin.Stablecoins are commonly backed by reserve assets like dollars or euros to achieve price stability.1 The price stability of USDC contrasts sharply with the notorious price fluctuations of other virtualcurrencies like Bitcoin and Ethereum.</string>
    <string name="TetherSen">Tether (USDT) is a virtualcurrency stablecoin pegged to the U.S. dollar and backed "100% by Tethers reserves," according its website.1 Tether is owned by iFinex, the Hong Kong-registered company that also owns the virtual exchange BitFinex.
\nTether was launched as RealCoin in July 2014 and was rebranded as Tether in November 2014. It started trading in February 2015.23 Originally based on the Bitcoin blockchain, Tether now supports Bitcoin Omni and Liquid protocols as well as the Ethereum, TRON, EOS, Algorand, Solana, OMG Network, and Bitcoin Cash (SLP) blockchains.
\nAs of May 2022, Tether was the third-largest virtualcurrency after 	(BTC) and Ethereum (ETH), and the largest stablecoin with a market capitalization of nearly $83 billion.5 In April 2022, Tethers USDT accounted for two-thirds of exchanges out of Bitcoin by value.
</string>
    <string name="DogecoinSen">Dogecoin is a virtualcurrency created by software engineers Billy Markus and Jackson Palmer, who decided to create a payment system as a "joke", making fun of the wild speculation in virtualcurrencies at the time.[3] It is considered both the first "meme coin", and, more specifically, the first "dog coin". Despite its satirical nature, some consider it a legitimate investment prospect. Dogecoin features the face of the Shiba Inu dog from the "doge" meme as its logo and namesake.[4][5][6] It was introduced on December 6, 2013, and quickly developed its own online community, reaching a market capitalization of over $85 billion[a] on May 5, 2021.[7] It is the current shirt sponsor (sleeve only) of Premier League club Watford.[8] Dogecoin.com promotes the currency as the "fun and friendly Internet currency", referencing its origins as a "joke."[9] Software engineers Billy Markus and Jackson Palmer launched the satirical virtualcurrency as a way to make fun of Bitcoin and the many other virtualcurrencies boasting grand plans to take over the world. With the help of Reddit, the site became an instant hit. Within two weeks, Dogecoin had established a dedicated blog and forum, and its market value has reached $8 million, once jumping to become the seventh largest electronic currency in the world.[10] Dogecoin is based on Scrypt algorithm, and the transaction process is more convenient than Bitcoin. Dogecoin takes only 1 minute to confirm, while BTC takes 10 minutes.</string>
    <string name="StellarSen">The term Stellar virtualcurrency refers to a digital or virtual currency developed by Stellar Development Foundation. The organizations currency, which is called the lumen, is traded under the symbol XLM on various virtualcurrency exchanges.1\n
        Lumens can be used by traders on the Stellar network, which is a blockchain-based distributed ledger network that connects banks, payments systems, and people to facilitate low-cost, cross-asset transfers of value, including payments.
</string>
    <string name="CardanoSen">Cardano is a third-generation, decentralized proof-of-stake (PoS) blockchain platform designed to be a more efficient alternative to proof-of-work (PoW) networks. Scalability, interoperability, and sustainability on PoW networks like Ethereum are limited by the infrastructure burden of growing costs, energy use, and slow transaction times.
\nCharles Hoskinson, the co-founder of the proof-of-work (PoW) blockchain Ethereum, understood the implications of these challenges to blockchain networks, and began developing Cardano and its primary virtualcurrency, ada, in 2015, launching the platform and the ada token in 2017.1
\nThe Cardano platform runs on the Ouroboros consensus protocol. Ouroboros, created by Cardano in its foundation phase, is the first PoS protocol that not only was proved to be secure, but also was the first to be informed by scholarly academic research. Each development phase, or era, in the Cardano roadmap is anchored by the research-based framework, incorporating peer-reviewed insights with evidence-based methods to make progress toward and achieve the milestones related to the future directions of the use applications of both the blockchain network and the ada token.21
\nAs of June 20, 2021, 71.59% of Cardanos virtualcurrency ASA, is staked in 2,626 active pools with a value of approximately $31.4 billion.

</string>
    <string name="etherumSen">Ethereum is a global virtual machine powered by blockchain technology. It is most commonly known for its native virtualcurrency, ether, or ETH. Ethereum network participants use ETH to pay for work done on the blockchain.
\nEthereum is designed to be scalable, programmable, secure, and decentralized. It is the blockchain of choice for developers and enterprises, who are creating technology based upon it to change the way many industries operate and the way we go about our daily lives.
</string>
</resources>