<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_background"
    tools:context=".MineCryptoCurrencyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_white_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/mine_crypto_currency"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/ll1"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:id="@+id/view1"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:background="@color/medium_gray" />

            <TextView
                android:id="@+id/t11"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/topic_one"
                android:gravity="center"
                android:text="@string/topic1"
                android:textColor="@color/orange"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view1"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="38dp"
                android:layout_toRightOf="@+id/t11"
                android:layout_weight="1"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/what_is_crypto_mining"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@+id/t11"
                android:background="@color/medium_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/orange_arrow_one" />


            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@id/img1"
                android:background="@color/medium_gray" />


            <View
                android:id="@+id/view4"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@color/medium_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl1"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/t22"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/topic_two"
                android:gravity="center"
                android:text="@string/topic2"
                android:textColor="@color/green"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="38dp"
                android:layout_toLeftOf="@+id/t22"
                android:layout_weight="1"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/mining_work"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl3"
            android:orientation="horizontal">


            <View
                android:layout_width="150dp"
                android:layout_height="3dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/img2"
                android:background="@color/medium_gray" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/green_arrow" />

            <View
                android:id="@+id/view5"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="6dp"
                android:background="@color/medium_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl3"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/t33"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/icon_three"
                android:gravity="center"
                android:text="@string/topic3"
                android:textColor="@color/dark_blue"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/t33"
                android:layout_weight="1"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/pow"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:src="@drawable/blue_arrow" />


            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:layout_toRightOf="@id/img3"
                android:background="@color/medium_gray" />

            <View
                android:id="@+id/view7"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:background="@color/medium_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl5"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/t44"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/topic_four"
                android:gravity="center"
                android:text="@string/topic4"
                android:textColor="@color/purple"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="38dp"
                android:layout_toLeftOf="@+id/t44"
                android:layout_weight="1"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/all_power"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl8"
            android:orientation="horizontal">


            <View
                android:id="@+id/view8"
                android:layout_width="150dp"
                android:layout_height="3dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/img4"
                android:background="@color/medium_gray" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="50dp"
                android:src="@drawable/purple_arrow" />

            <View
                android:id="@+id/view9"
                android:layout_width="40dp"
                android:layout_height="2dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="6dp"
                android:background="@color/medium_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rl9"
            android:layout_marginTop="1dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:id="@+id/t55"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:background="@drawable/topic_five"
                android:gravity="center"
                android:text="@string/topic5"
                android:textColor="@color/red"
                android:textSize="14dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/t5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_toRightOf="@+id/t55"
                android:layout_weight="1"
                android:fontFamily="@font/alike_angular"
                android:gravity="center"
                android:text="@string/alternative"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:textStyle="bold" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl10"
            android:orientation="horizontal">



            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="30dp"
                android:background="@color/medium_gray" />


        </RelativeLayout>



    </RelativeLayout>
</androidx.core.widget.NestedScrollView>
